# StructuralGT

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AverageNodalConnectivityCast.cpp  AverageNodalConnectivityCast.h  AverageNodalConnectivityCast.pxd  BoundaryBetweennessCast.cpp  BoundaryBetweennessCast.h  BoundaryBetweennessCast.pxd  BoundedBetweennessCast.cpp  BoundedBetweennessCast.h  BoundedBetweennessCast.pxd  ContributorAgreement.md  LICENSE.txt  NonLinearRandomBetweennessCast.cpp  NonLinearRandomBetweennessCast.h  NonLinearRandomBetweennessCast.pxd  README.md  README.rst  RandomBetweennessCast.cpp  RandomBetweennessCast.h  RandomBetweennessCast.pxd  RandomBoundaryBetweennessCast.cpp  RandomBoundaryBetweennessCast.h  RandomBoundaryBetweennessCast.pxd  Untitled.ipynb  Util.h  VertexBoundaryBetweennessCast.cpp  VertexBoundaryBetweennessCast.h  VertexBoundaryBetweennessCast.pxd  __main__.py  _average_nodal_connectivity_cast.pyx  _bounded_betweenness_cast.pyx  _nonlinear_random_betweenness_cast.pyx  _random_betweenness_cast.pyx  convert.pyx  final_EL.csv  gui_3d_image.py  gui_single_image.py  (+8 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: conda-builds.yml  draft-pdf.yml  env.yml
.github/workflows/conda-envs/: conda-lock.yml  env-py312.yml  env-py313.yml  env.yml  py312-conda-lock.yml  py312-env.yml  py313-conda-lock.yml  py313-env.yml
Example/: Example.ipynb  test.py
Example/ANF/: slice0000.tiff
Example/ANF/Binarized/: cleaned_merged_skel.gsd  merged_skel.gsd  skel.gsd  slice0000.tiff
Example/AgNWN/1_175_6/: 1_175_6_Results.csv  img_options.json  params.json
StructuralGT/: AnisotropyDetection.ipynb  ChiralityDetection.ipynb  GT_Params.py  GT_Params_noGUI.py  GetWeights_3d.py  GraphObjects.ipynb  RotationTests.ipynb  __init__.py  __init__v1.py  _average_nodal_connectivity_cast.pyx  _boundary_betweenness_cast.pyx  _random_betweenness_cast.pyx  _random_boundary_betweenness_cast.pyx  _vertex_boundary_betweenness_cast.pyx  average_nodal_connectivity.py  base.py  basev1.py  betweenness.py  binarizer.py  convert.c  deeplearner.py  dynamic_networks.py  electronic.py  entrypoints.py  error.py  geometric.py  gui_single_image.py  interaction_networks.py  network.py  networks.py  physical_networks.py  process_image.py  settings.py  skel_ID.py  skel_ID_3d.py  skel_features.py  skel_gen.py  sknwEdits.py  structural.py  test_funcs.py  (+2 more)
StructuralGT.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
StructuralGT/Owuor/: __init__.py  entrypoints.py
StructuralGT/Owuor/SGT/: base_image.py  fiber_network.py  graph_analyzer.py
StructuralGT/SGT/: graph_analyzer.py  network_processor.py
StructuralGT/app/: README.md  SGT.spec  StructuralGT.spec  build_dmg.sh  environment.yml
StructuralGT/app/src/: main.py
StructuralGT/apps/: __init__.py  cli_main.py  gui_main.py  gui_main.spec
StructuralGT/apps/controller/: __init__.py  file_controller.py  image_provider.py  main_controller.py  signal_controller.py  task_controller.py  view_controller.py
StructuralGT/apps/gui_mcw/: .csv_handler.py.swp  controller.py  csv_handler.py  file_controller.py  handler.py  task.py  (+6 more)
StructuralGT/compute/: graph_analyzer.py
StructuralGT/cpp/: AverageNodalConnectivityCast.pxd  BoundaryBetweennessCast.cpp  BoundaryBetweennessCast.h  RandomBoundaryBetweennessCast.cpp  RandomBoundaryBetweennessCast.pxd  Util.h  VertexBoundaryBetweennessCast.cpp
StructuralGT/image_processing/: base_image.py  binarizer.py  network_processor.py
StructuralGT/imaging/: binarizer.py  network_processor.py  process_image.py
StructuralGT/metrics/: algorithm_benchmarks.py  average_nodal_connectivity.py  betweenness.py  electronic.py  geometric.py  graph_analyzer.py  structural_v1.py
StructuralGT/networks/: base.py  basev1.py  fiber_network-Alain.py  fiber_network.py  graph_skeleton.py  networks.py  point_network.py  sknw_mod.py
StructuralGT/pytest/: _test_StructuralNetworks.py  conftest.py  network_factory.py  options.py  sbox.py  test_AverageNodalConnectivity.py  test_Betweenness.py  test_Constructors.py  test_Electronic.py  test_Geometric.py  test_InteractionNetworks.py  test_Networks.py  test_ResistiveNetworks.py  test_Structural.py  test_StructuralNetworks.py
StructuralGT/sgt_ml/: deeplearner.py
StructuralGT/utils/: util.py
StructuralGTEdits/: 1  3DTests.ipynb  AgNWN.csv  AnisotropyDetection.ipynb  GetWeights_3d.py  RotationTests.ipynb  base.py  interaction_networks.py  network.py  physical_networks.py  setup.py~  skel.gsd  util.py  weight_image.tiff
StructuralGTEdits.egg-info/: SOURCES.txt
StructuralGTEdits/.ipynb_checkpoints/: AnisotropyDetection-checkpoint.ipynb  Chirality indices-checkpoint.ipynb
StructuralGTEdits/StructuralGTEdits.egg-info/: PKG-INFO  top_level.txt
StructuralGTEdits/pytest/: .test_ResistiveNetworks.py.swp  InteractionNetworks.py  test_InteractionNetworks.py  test_ResistiveNetworks.py  test_StructuralNetworks.py
StructuralGTEdits/sknwEdits/: setup.py
apps/: gui_main.py
apps/gui_mcw/: controller.py  image.py  image_handler.py  image_provider.py  qthread_worker.py
apps/sgt_qml/: LeftContent.qml  MainWindow.qml  RightContent.qml
doc/: readthedocs-env.yaml
doc/source/: conf.py  index.rst
paper/: paper.bib  paper.md
src/StructuralGT/: __init__.py
(+275 files in other folders)
