[build-system]
requires = ["setuptools",
            "wheel",
            "numpy>=2.0.0rc1",
            "cython>=3.0.2",
            "igraph",
            "eigen",
]

[project]
name = "StructuralGT"
version = "0.0.1"
dependencies = [
        'numpy>=2.0',
        'scipy',
        'scikit-image',
        'matplotlib',
        'networkx',
        'opencv-python',
        'pandas',
        'Cython',
        'gsd>=3.0.0',
        'python-igraph',
        'eigen',
        'pytest',
        'cmake',
        'freud-analysis>=3.1.0',
        'ipywidgets',
]
