[build-system]
requires = ["setuptools",
            "wheel",
            "numpy>=2.0.0rc1",
            "cython>=3.0.11",
            "igraph",
            "eigen",
]

[project]
name = "StructuralGT-API"
version = "0.0.1"
dependencies = [
        'numpy>=2.0',
        'scipy',
        'scikit-image',
        'matplotlib',
        'networkx',
        'opencv-python',
        'pandas',
        'Cython>=3.0.11',
        'gsd>=3.0.0',
        'python-igraph',
        'eigen',
        'pytest',
        'cmake',
        'freud-analysis>=3.1.0',
        'ipywidgets',
	'tbb',
	'tbb-devel' 
]

#[tool.setuptools]
#ext-modules = [
#  {name = "StructuralGT._boundary_betweenness_cast", sources = ["_boundary_betweenness_cast.cpp"]},
#  {name = "StructuralGT._vertex_boundary_betweenness_cast", sources = ["_vertex_boundary_betweenness_cast.cpp"]},
#  {name = "StructuralGT._random_boundary_betweenness_cast", sources = ["_random_boundary_betweenness_cast.cpp"]},
#  {name = "StructuralGT._average_nodal_connectivity_cast", sources = ["_average_nodal_connectivity_cast.cpp"], language="c++"},
#]

[tool.ruff]
include = ["*.py", "*.ipynb"]
exclude = ["tests/data"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "E",   # pycodestyle-error
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "W",   # pycodestyle-warning
    "C4",  # check list comprehensions and generators
    "PT",  # pytest style checks
    "UP",  # pyupgrade
    "NPY", # check for use of deprecated numpy functions
    "SIM", # check for duplicate/needlessly verbose code
    "ISC", # checks for implicit string concatenation
    "RET", # check for unnecessary branches surround returned values
    "RUF", # reduce ambiguity in string concatenation and iterable combination
    "PIE790", # remove unnecessary pass statements
    "PIE794", # enable c-style single definition of variables
]
ignore = [
  "S101", # Assertions are a good thing
  "D105", # Magic methods don't require documentation.
  "D107", # __init__ methods don't require documentation.
  "ISC001", # Raises warning in ruff formatter
  "SIM116", # Allow certain branched if statements
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-third-party = ["hypothesis", "pytest"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "B018", "F811"]
"parsnip/*" = ["E741"]
"__init__.py" = ["F401"] # Do not remove "unused" imports in __init__.py files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
